--- a/css/general.css
+++ b/css/general.css
@@ -17,7 +17,7 @@ h1 {
   font-size: var(--size-h1);
 }
 h2 {
-  font-family: var(--font-family-text);
+  font-family: var(--font-family-text-bold);
   font-weight: var(--font-weight-bold);
   font-size: var(--size-h2);
 }
