--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Baloo2";
-  src: url("../fonts/Baloo2-Regular.woff2") format("woff2");
+  src: url("../fonts/Baloo2-VariableFont_wght.woff2") format("woff2");
   font-weight: var(--font-weight-bold);
   font-style: normal;
 }
