--- a/css/about.css
+++ b/css/about.css
@@ -80,11 +80,11 @@ main a {
   box-shadow: var(--drop-shadow);
   cursor: pointer;
   font-size: clamp(0.7rem, 1vw, 2rem);
+}
 
-  &:hover {
-    background: var(--color-cta2-bg);
-    color: var(--color-cta2-text);
-  }
+.cta-yellow:hover {
+  background: var(--color-cta2-bg);
+  color: var(--color-cta2-text);
 }
 
 .cta-red {
@@ -96,11 +96,11 @@ main a {
   font-weight: bold;
   box-shadow: var(--drop-shadow);
   cursor: pointer;
+}
 
-  &:hover {
-    background: var(--color-cta1-bg);
-    color: var(--color-cta1-text);
-  }
+.cta-red:hover {
+  background: var(--color-cta1-bg);
+  color: var(--color-cta1-text);
 }
 
 .cta-menu {
